Make CORS allowed origins configurable via environment variable